k8s/backend-deployment.yaml
# backend-deployment.yml

apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: cloudgallery
  name: cloudgallerybackend
  labels:
    app: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend-cont
        image: harcastic/cloudgallerybackend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
