k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: cloudgallery
  name: cloudgalleryfrontend
  labels:
    app: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend-cont
        image: harcastic/cloudgalleryfrontend:1

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
