k8s/redix-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: cloudgallery
  name: redis-service
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
